Exam submittal for data-scientist-intern-2018-Q3

--- a/submittals/data-scientist-intern-2018-Q3/Ni-Shaoyang/ds-interview-examQ11Q24.ipynb
+++ b/submittals/data-scientist-intern-2018-Q3/Ni-Shaoyang/ds-interview-examQ11Q24.ipynb
@@ -335,7 +335,7 @@
     "The reward from winning the game when the head appears in the nth filpping: $$ R =(2)^{n-1}$$\n",
     "So, we can calculate the expectation from winning the game at n flipping is: $$ E = P * R = 1/2 $$\n",
     "The expectation of the winning the game regardless of the number of flipping is:\n",
-    "$$ \\sum\\limits_{i=0}^{inf} E_i = \\frac{1}{2} + \\frac{1}{2} + ... = i * \\frac{1}{2} $$\n",
+    "$$ \\sum E_i = \\frac{1}{2} + \\frac{1}{2} + ... = i * \\frac{1}{2} $$\n",
     "Since the i can be infinite, and no one can predict when the head will come, the strategy to play this game is to pay ${\\frac{1}{2}}$ for every flippings or if you can predict what i flippings will be when the head comes, then bet $i*{\\frac{1}{2}}$. The strategy is also how I would like to pay to play this game. "
    ]
   },
